--- a/src/Components/Layout.module.css
+++ b/src/Components/Layout.module.css
@@ -1,7 +1,7 @@
 .navbar {
     display: flex;
     align-items: center;
-    height: 90px;
+    height: 75px;
     padding: 20px;
     margin: 0;
     background-color: brown;
@@ -18,7 +18,7 @@
     background-color: bisque;
     margin: 0;
     padding: 50px;
-    min-height: 100vh;
+    min-height: calc(100vh - 75px - 75px);
 }
 
 .filter {
@@ -34,6 +34,8 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    background-color: bisque;
+    height: calc(100vh - 100px - 75px);
 }
 
 .error_section {
@@ -53,7 +55,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 90px;
+    height: 100px;
     padding: 20px;
     margin: 0;
     background-color: brown;
@@ -74,4 +76,21 @@
     transition: .3s;
     cursor: pointer;
     opacity: 1;
+}
+
+.H1 {
+    color: #8884D8;
+    font-style: italic;
+}
+
+.loading {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: bisque;
 }
